--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "src/**/*.js": "eslint"
   },
   "dependencies": {
     "lodash-es": "^4.17.20"
@@ -24,9 +30,15 @@
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
+    "@eslint/js": "^9.38.0",
     "@types/jest": "^30.0.0",
     "babel-jest": "^30.2.0",
+    "eslint": "^9.38.0",
+    "eslint-plugin-jest": "^29.0.1",
+    "globals": "^16.4.0",
+    "husky": "^9.1.7",
     "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0"
+    "jest-environment-jsdom": "^30.2.0",
+    "lint-staged": "^16.2.6"
   }
 }
